--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="2.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="cursors">
@@ -27,6 +27,6 @@
       
     </div>
 
-    <script src="2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
